# Brats-23

./: .gitignore  README.md  brain_tumor_roadmap_v4_final.md  pyproject.toml  recover_small.py  requirements.txt  rules.md  run_fair_med.py  run_fair_small.py  run_fair_small_med.py  run_phase2_robust.py  run_phase3_robust.py  run_rf_large.py  run_unetr_tuned.ps1  save_220.py  save_30.py
configs/: default.yaml  phase3.yaml  smoke.yaml  sweep.yaml  sweep_unetr_tuned.yaml
docs/: ARCHITECTURE.md  PIPELINE.md  RUNBOOK.md
scripts/: aggregate.py  analyze_probe1.py  analyze_probe3.py  check_vram.py  evaluate.py  make_splits.py  make_summary_figure.py  preflight.py  run_fix.py  run_probe1.py  run_probe3.py  run_synthetic_check.py  run_xai_check.py  security_audit.py  train.py
src/brats_trust/: __init__.py  aggregate.py  config.py  constants.py  engine.py  experiments.py  figures.py  logging_utils.py  physics_answer_key.json  pipeline.py  preflight.py
src/brats_trust/data/: __init__.py  dataset.py  preprocess.py  splits.py  synthetic.py
src/brats_trust/metrics/: __init__.py  erf.py  faithfulness.py  fragility.py  probing.py  reliance.py  segmentation.py  stats.py  xai.py
src/brats_trust/models/: __init__.py  base.py  dynunet.py  factory.py  scaffold.py  segmamba.py  swin_unetr.py  unet3d.py  unetr.py
tests/: test_architectures.py  test_data.py  test_figures.py  test_logging.py  test_metrics.py  test_phase3.py  test_pipeline.py  test_preflight.py  test_probe3.py  test_smoke.py  test_stage4.py  test_stage6.py
